made the header on mobile fixed

--- a/src/style.scss
+++ b/src/style.scss
@@ -23,7 +23,12 @@ a {
       margin-top: 2rem;
 
       @media only screen and (max-width: 768px) {
-        padding: 0.7rem;
+        position: fixed;
+        left: 0;
+        margin: 0;
+        border-radius: 0;
+        z-index: 1000;
+        padding: 1rem 0.7rem;
       }
 
       &_logo-side {
@@ -79,7 +84,7 @@ a {
       padding: 7rem 4rem;
 
       @media only screen and (max-width: 768px) {
-        padding: 4rem 0;
+        padding: 9rem 0;
       }
 
       &_left {
